--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
             Thank you!
         </p>
         
-        <div class="transbox">
-            <video class="video-fluid z-depth-1" autoplay loop controls>
+        <div class="column">
+                <video class="videoB" width="800" height="450" controls>
                 <source src="movie2.mp4" type="video/mp4">
                 <source src="movie.ogg" type="video/ogg">
             </video>
