--- a/BD.html
+++ b/BD.html
@@ -16,6 +16,7 @@
     <a class="button button2" href="index.html">Home</a>
     <a class="button button2" href="Tours.html">Tours</a>
     <a class="button button2" href="BD.html">Best destinations</a>
+    <a class="button button2" href="Gallery.html">Gallery</a>
     <a class="button button2" href="contact.html">Contact</a>
         
     <br/>
