--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </h2>
        
         
-        <div>
+        <div align = center>
                 <img class="a" src="IMG/img04.jpg" alt="Ruins"
             style="width:300px;height:200px;margin-left:15px;"> 
              <img class="a" src="IMG/img02.jpg" alt="Ruins"
             style="width:300px;height:200px;margin-left:15px;"> 
         </div>
         <br/>
-            <div class="div2">
+            <div align= center class="div2">
                 <p>
                     The reasons to choose this beautiful tropical paradise as your next destination are countless. For one, it is wildly known as <i>The Pearl Of The Indian Ocean</i> for its overwhelming natural beauty. It has countless touristic locations that will leave you wanting more which is why we are here to fulfill your wishes.
                 </p>
