--- a/Tours.html
+++ b/Tours.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tours</title>
-<link rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
+        <title>Sri Wanderers</title>
 </head>
 <body>
     
