--- a/Tours.html
+++ b/Tours.html
@@ -49,7 +49,7 @@
     </div>
     
     <div class="galleryB" >
-        <img src="images/map4.png" alt="Map4"
+        <img src="images/map4.PNG" alt="Map4"
             style="width:550px;height:330px;margin-left:15px;">
     </div>
     
