--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       <br/>
         
         <h3>
-            And if you'd like to reach us, please be sure to send us an e-mail to @sriwanderers@gmail.com
+            And if you'd like to reach us, please be sure to send us an e-mail to <i>sriwanderers@gmail.com</i>
         </h3>
         
         <p>
